Began writing IR code, added signs to encoder data

--- a/robot/.classpath
+++ b/robot/.classpath
@@ -3,5 +3,12 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/jSSC-2.6.0-Release/jssc.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OpenCV-2.4.8">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/opt/opencv-2.4.8/bin"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/MaslabComm"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/MaslabBotClient"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
